--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@types/react-dom": "^17.0.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "swiper": "^8.0.7",
+    "video-react": "^0.15.0",
     "webpack": "^5.70.0"
   },
   "devDependencies": {
@@ -20,6 +22,9 @@
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^12.6.0",
+    "scss-loader": "^0.0.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.2",
