--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "license": "MIT",
   "dependencies": {
     "@types/react-dom": "^17.0.14",
+    "axios": "^0.27.2",
+    "lottie-react-web": "^2.2.2",
+    "path-browserify": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
     "swiper": "^8.0.7",
     "video-react": "^0.15.0",
     "webpack": "^5.70.0"
@@ -26,6 +31,7 @@
     "sass-loader": "^12.6.0",
     "scss-loader": "^0.0.1",
     "style-loader": "^3.3.1",
+    "terser": "^5.12.1",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.2",
     "webpack-cli": "4.9.2",
