--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@types/react-dom": "^17.0.14",
     "axios": "^0.27.2",
+    "koa2-cors": "^2.0.6",
+    "loadsh": "^0.0.4",
     "lottie-react-web": "^2.2.2",
     "path-browserify": "^1.0.1",
     "react": "^17.0.2",
