--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.2",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
     "swiper": "^8.0.7",
     "video-react": "^0.15.0",
@@ -34,6 +36,7 @@
     "scss-loader": "^0.0.1",
     "style-loader": "^3.3.1",
     "terser": "^5.12.1",
+    "thread-loader": "^3.0.4",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.2",
     "webpack-cli": "4.9.2",
