--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "@types/react-dom": "^17.0.14",
+    "antd": "^5.1.1",
     "axios": "^0.27.2",
-    "koa2-cors": "^2.0.6",
     "loadsh": "^0.0.4",
     "lottie-react-web": "^2.2.2",
     "path-browserify": "^1.0.1",
@@ -41,11 +41,13 @@
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.2",
     "webpack-cli": "4.9.2",
-    "webpack-dev-server": "4.0.0"
+    "webpack-dev-server": "4.0.0",
+    "eslint-import-resolver-alias": "^1.1.2"
   },
   "scripts": {
     "start": "webpack --config webpack.config.js --mode development",
     "dev": "webpack serve --mode development --env development",
     "build": "webpack --config webpack.config.js --mode production"
   }
+
 }
