feat: add a relative path  '@pages'

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "baseUrl": "./src",
     "paths": {
       "@": ["./src"],
+      "@/*": ["./src/*"],
+      "@pages": ["./src"],
+      "@pages/*": ["./src/*"],
       "@components": ["./components"],
       "@components/*": ["./components/*"],
       "@types": ["./types"],
