--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "swiper": "^8.0.7",
     "video-react": "^0.15.0",
     "webpack": "^5.70.0"
@@ -28,7 +29,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "@reduxjs/toolkit": "^1.8.2",
+    "@reduxjs/toolkit": "^1.9.1",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.7.1",
     "eslint-import-resolver-alias": "^1.1.2",
