--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "antd": "^5.1.1",
     "axios": "^0.27.2",
     "eslint-plugin-import": "^2.26.0",
+    "exif-js": "^2.3.0",
     "http-proxy-middleware": "^2.0.6",
     "loadsh": "^0.0.4",
     "lottie-react-web": "^2.2.2",
