--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@types/react-dom": "^17.0.14",
     "antd": "^5.1.1",
     "axios": "^0.27.2",
+    "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "exif-js": "^2.3.0",
     "http-proxy-middleware": "^2.0.6",
     "loadsh": "^0.0.4",
